tests/files/lexer_tests/should_fail/071.cmdr
// Missing right curly bracket for string interpolation
a = "Unterminated format string ${3 + 5 right here";